feat: use name instead id
